vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_match_condition.vv
fn main() {
	'' == (match $embed_file(@FILE).path {
		'' {
			'a'
		}
		else {
			'b'
		}
	})
}
